feat(Viso) : Rework graphique